Added notebook that now works with layoutgit add NeuropythyTransparentBrain.ipynb  :sparkles:

--- a/scripts/NeuropythyTransparentBrain.ipynb
+++ b/scripts/NeuropythyTransparentBrain.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
     "\n",
     "## for dropdown meneu\n",
     "import ipywidgets as widgets\n",
-    "from ipywidgets import interact, interact_manual, GridspecLayout\n",
+    "from ipywidgets import interact, interactive, interact_manual, GridspecLayout\n",
     "\n",
     "# For loading data files\n",
     "import h5py\n",
@@ -42,20 +42,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading mesh and electrode data with wget\n",
-      "<KeysViewHDF5 ['CV_listen', 'CV_speak']>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "local_path = '../shablona/data'\n",
+    "local_path = '/Applications/freesurfer_v5/subjects/'\n",
     "if not os.path.isdir(os.path.join(local_path,'test_subj')):\n",
     "    # download example data with wget\n",
     "    print('Downloading mesh and electrode data with wget')\n",
@@ -66,25 +58,45 @@
     "        #zip_ref.extract('test_subj/surf/', local_path)\n",
     "        #zip_ref.extract('test_subj/mri/', local_path)\n",
     "        zip_ref.extractall(local_path)\n",
-    "else:\n",
-    "    print('Data exists')\n",
     "\n",
     "# Get the functional data\n",
     "data_dict = dict()\n",
+    "local_path = '../shablona/data'\n",
     "with h5py.File('%s/test_subj_CV.hf5'%(local_path),'r') as f:\n",
     "    stimulus_types = f['ecog'].keys()\n",
     "    times = f['times'][:].ravel()\n",
-    "    print(stimulus_types)\n",
+    "    #print(stimulus_types)\n",
     "    for s in stimulus_types:\n",
-    "        data_dict[s] = f['ecog'][s][:]"
+    "        data_dict[s] = f['ecog'][s][:]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(256, 801)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_dict['CV_listen'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
+    "local_path = '/Applications/freesurfer_v5/subjects/'\n",
     "subj_path = local_path+'/test_subj'\n",
     "\n",
     "if os.path.exists(subj_path):\n",
@@ -100,20 +112,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_activity(data_dict, times, condition, elec):\n",
+    "    if elec > data_dict[condition].shape[0]:\n",
+    "        data = np.zeros((data_dict[condition].shape[1],))\n",
+    "    else:\n",
+    "        data = data_dict[condition][elec,:].ravel()\n",
+    "    plt.plot(times, data)\n",
+    "    plt.axvline(color='k', linestyle='--')\n",
+    "    plt.xlabel('Time (s)')\n",
+    "    plt.ylabel('Z-scored HG')\n",
+    "\n",
+    "#plt.axvline?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "anatomical_areas = [area[0] for area in np.unique(elecs['anatomy'][:,3])]\n",
+    "#                      selected_anatomy = anatomical_areas,\n",
+    "\n",
+    "elec_select = widgets.SelectMultiple(\n",
+    "    options= elecs['eleclabels'][:,0],\n",
+    "    value=['G1'],\n",
+    "    #rows=10,\n",
+    "    description='Electrode(s)',\n",
+    "    disabled=False\n",
+    ")\n",
+    "\n",
+    "#@interact\n",
+    "\n",
+    "def select_parameters(selected_elec = elecs['eleclabels'][:,0], \n",
+    "                      selected_type = ['raw','not raw'],\n",
+    "                      selected_stimulus = [k for k in data_dict.keys()],\n",
+    "                      selected_time = (0, 10, 10000)):\n",
+    "    elecs_scatter.selected = np.where(elecs['eleclabels'][:,0] == selected_elec)\n",
+    "    fig = plot_activity(data_dict, times, condition = selected_stimulus, elec = elecs_scatter.selected)\n",
+    "    return\n",
+    "    #return fig\n",
+    "\n",
+    "#elecs_scatter.selected\n",
+    "\n",
+    "w = interactive(select_parameters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "cortex_plot_3D() got an unexpected keyword argument 'mesh_alpha'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-44-cdd770459ba2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mclr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.5\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mipv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfigure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mipf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mny\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcortex_plot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msub\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrh\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpial_surface\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolor\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mclr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malpha\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0munderlay\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmesh_alpha\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m#ipf.meshes[0].material.transparent = True\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/conda/lib/python3.7/site-packages/neuropythy/graphics/core.py\u001b[0m in \u001b[0;36mcortex_plot\u001b[0;34m(mesh, *args, **opts)\u001b[0m\n\u001b[1;32m   1095\u001b[0m         \u001b[0mthen\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mresulting\u001b[0m \u001b[0mcolors\u001b[0m \u001b[0mplotted\u001b[0m \u001b[0mwill\u001b[0m \u001b[0mbe\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0.75\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1096\u001b[0m       \u001b[0;34m*\u001b[0m \u001b[0mmask\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mdefault\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0mspecifies\u001b[0m \u001b[0ma\u001b[0m \u001b[0mmask\u001b[0m \u001b[0mto\u001b[0m \u001b[0muse\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mmesh\u001b[0m\u001b[0;34m;\u001b[0m \u001b[0mthi\u001b[0m \u001b[0msis\u001b[0m \u001b[0mpassed\u001b[0m \u001b[0mthrough\u001b[0m \u001b[0mmap\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmask\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1097\u001b[0;31m         to figure out the masking. Those vertices not in the mask are not plotted (but they will be\n\u001b[0m\u001b[1;32m   1098\u001b[0m         plotted in the underlay if it is not None).\n\u001b[1;32m   1099\u001b[0m       \u001b[0;34m*\u001b[0m \u001b[0mhemi\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mdefaut\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0mspecifies\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mhemisphere\u001b[0m \u001b[0mto\u001b[0m \u001b[0muse\u001b[0m\u001b[0;34m.\u001b[0m \u001b[0mIf\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mpassed\u001b[0m \u001b[0mmesh\u001b[0m \u001b[0mobject\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mactually\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: cortex_plot_3D() got an unexpected keyword argument 'mesh_alpha'"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "88c095b7253140de9d4db3caeba9ab88",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "02578dedc2f5464a99c3a5a2ff14e354",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "GridspecLayout(children=(Figure(camera=PerspectiveCamera(fov=0.644570721372708, position=(0.0, -100.0, 0.0), q…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -136,111 +216,34 @@
     "\n",
     "size = FloatSlider(min=0, max=10, step=0.1)\n",
     "size_selected = FloatSlider(min=0, max=10, step=0.1)\n",
-    "color = ColorPicker()\n",
-    "color_selected = ColorPicker()\n",
+    "color = ColorPicker(value='coral')\n",
+    "color_selected = ColorPicker(value='cornflowerblue')\n",
     "jslink((elecs_scatter, 'size'), (size, 'value'))\n",
     "jslink((elecs_scatter, 'size_selected'), (size_selected, 'value'))\n",
     "jslink((elecs_scatter, 'color'), (color, 'value'))\n",
     "jslink((elecs_scatter, 'color_selected'), (color_selected, 'value'))\n",
-    "VBox([ipv.gcc(), size, size_selected, color, color_selected])\n",
+    "#VBox([ipv.gcc(), size, size_selected, color, color_selected])\n",
     "\n",
-    "#ipv.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "696cee3d597f45d8bbdbfc0fa5c30696",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='selected_elec', options=(array(['G1'], dtype='<U2'), array(['G2'],…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[0]])"
-      ]
-     },
-     "execution_count": 110,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "anatomical_areas = [area[0] for area in np.unique(elecs['anatomy'][:,3])]\n",
-    "#                      selected_anatomy = anatomical_areas,\n",
+    "#ipv.show()\n",
     "\n",
-    "@interact\n",
-    "def select_parameters(selected_elec = elecs['eleclabels'][:,0], \n",
-    "                      selected_type = ['raw','not raw'],\n",
-    "                      selected_time = (0, 10, 10000)):\n",
-    "    elecs_scatter.selected = np.where(elecs['eleclabels'][:,0] == selected_elec)\n",
-    "    return \n",
-    "\n",
-    "elecs_scatter.selected"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['__header__', '__version__', '__globals__', 'anatomy', 'eleclabels', 'elecmatrix'])"
-      ]
-     },
-     "execution_count": 111,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "elecs.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 119,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'layout'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-119-7ffae58f65d0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mgrid\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcolor\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mgrid\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcolor_selected\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mgrid\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0melecs_select\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mgrid\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/conda/lib/python3.7/site-packages/ipywidgets/widgets/widget_templates.py\u001b[0m in \u001b[0;36m__setitem__\u001b[0;34m(self, key, value)\u001b[0m\n\u001b[1;32m    316\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_id_count\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    317\u001b[0m         \u001b[0mobj_id\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'widget%03d'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_id_count\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 318\u001b[0;31m         \u001b[0mvalue\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlayout\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgrid_area\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mobj_id\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    319\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    320\u001b[0m         \u001b[0mrows\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_indices_from_slice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'layout'"
-     ]
-    }
-   ],
-   "source": [
-    "elecs_select = select_parameters()\n",
-    "grid = GridspecLayout(10, 2)\n",
+    "grid = GridspecLayout(12, 2)\n",
     "grid[:, 0] = ipf\n",
     "grid[0, 1] = size\n",
     "grid[1, 1] = size_selected\n",
     "grid[2, 1] = color\n",
     "grid[3, 1] = color_selected\n",
-    "grid[4, 1] = elecs_select\n",
+    "grid[4:, 1] = w\n",
+    "#grid[4, 1] = fig\n",
     "\n",
     "grid"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -266,7 +269,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
