Minor color changes, still need to fix lasso

--- a/scripts/NeuropythyTransparentBrain.ipynb
+++ b/scripts/NeuropythyTransparentBrain.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
     "# needs: pip install shapely\n",
     "# pip install wget\n",
     "\n",
-    "## for dropdown meneu\n",
+    "## for dropdown menu\n",
     "import ipywidgets as widgets\n",
     "from ipywidgets import interact, interactive, interact_manual, GridspecLayout\n",
     "\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
        "(256, 801)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,8 @@
     "    else:\n",
     "        data = data_dict[condition][elec,:].ravel()\n",
     "    plt.plot(times, data)\n",
-    "    plt.axvline(color='k', linestyle='--')\n",
+    "    plt.axvline(color='k', linestyle='--', linewidth=1)\n",
+    "    plt.axhline(color='k', linestyle='--', linewidth=1)\n",
     "    plt.xlabel('Time (s)')\n",
     "    plt.ylabel('Z-scored HG')\n",
     "\n",
@@ -131,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,13 +165,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "88c095b7253140de9d4db3caeba9ab88",
+       "model_id": "c171fe79d1aa44028d93b47781dfde56",
        "version_major": 2,
        "version_minor": 0
       },
@@ -184,7 +185,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "02578dedc2f5464a99c3a5a2ff14e354",
+       "model_id": "062982e50b2d41a0be4d5375b698dc99",
        "version_major": 2,
        "version_minor": 0
       },
@@ -203,21 +204,22 @@
     "ipv.figure()\n",
     "ipf = ny.cortex_plot(sub.rh.pial_surface, color=clr, alpha=0.5, underlay=None, mesh_alpha = 0.5)\n",
     "\n",
-    "#ipf.meshes[0].material.transparent = True\n",
-    "#ipf.meshes[0].color = clr\n",
-    "\n",
+    "# Get the lasso selector\n",
     "ipv.selector_default()\n",
     "\n",
-    "elecs_scatter = ipv.scatter(elecs['elecmatrix'][:,0],elecs['elecmatrix'][:,1],elecs['elecmatrix'][:,2], marker='sphere', selected=[0,1,2,3,4])\n",
-    "#elecs_scatter\n",
-    "#print(ipv.animation_control)\n",
+    "# Plot the electrodes as spheres\n",
+    "elecs_scatter = ipv.scatter(elecs['elecmatrix'][:,0],elecs['elecmatrix'][:,1],elecs['elecmatrix'][:,2], \n",
+    "                            marker='sphere', selected=[0,1,2,3,4], color_selected='cornflowerblue', \n",
+    "                            color='coral', size_selected = 3.0)\n",
     "\n",
     "from ipywidgets import FloatSlider, ColorPicker, VBox, jslink\n",
     "\n",
-    "size = FloatSlider(min=0, max=10, step=0.1)\n",
-    "size_selected = FloatSlider(min=0, max=10, step=0.1)\n",
-    "color = ColorPicker(value='coral')\n",
-    "color_selected = ColorPicker(value='cornflowerblue')\n",
+    "style = {'description_width': '100px'}\n",
+    "\n",
+    "size = FloatSlider(min=0, max=10, step=0.1, description='Unselected size', style=style)\n",
+    "size_selected = FloatSlider(min=0, max=10, step=0.1, description='Selected size', style=style)\n",
+    "color = ColorPicker(concise=True, description='Unselected')\n",
+    "color_selected = ColorPicker(concise=True, description='Selected')\n",
     "jslink((elecs_scatter, 'size'), (size, 'value'))\n",
     "jslink((elecs_scatter, 'size_selected'), (size_selected, 'value'))\n",
     "jslink((elecs_scatter, 'color'), (color, 'value'))\n",
@@ -240,9 +242,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "object of type 'int' has no len()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-66-6b3b01eb5e19>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: object of type 'int' has no len()"
+     ]
+    }
+   ],
    "source": []
   },
   {
