Added some documentation

--- a/scripts/NeuropythyTransparentBrain.ipynb
+++ b/scripts/NeuropythyTransparentBrain.ipynb
@@ -8,8 +8,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is an interactive tool for visualizing time series data from an ECoG experiment. You can do the following:\n",
+    "* Select electrodes with the menu list or mouse selection tool (use ctrl-L or ctrl-C and keep ctrl pressed, then use the mouse)\n",
+    "* Change the size and color of selected and unselected electrodes"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,30 +81,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(256, 801)"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data_dict['CV_listen'].shape"
+    "#data_dict['CV_listen'].shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Get the electrode coordinates\n",
+    "\n",
     "local_path = '/Applications/freesurfer_v5/subjects/'\n",
     "subj_path = local_path+'/test_subj'\n",
     "\n",
@@ -112,11 +112,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "def plot_activity(data_dict, times, condition, elec):\n",
+    "    '''\n",
+    "    Plot the activity for the selected electrode(s)\n",
+    "    Inputs:\n",
+    "    \n",
+    "        data_dict [dict] : \n",
+    "        times [array-like] : \n",
+    "        condition [str] : condition to plot (from data_dict.keys())\n",
+    "        elec [int] : selected electrode \n",
+    "        \n",
+    "    '''\n",
     "    if elec > data_dict[condition].shape[0]:\n",
     "        data = np.zeros((data_dict[condition].shape[1],))\n",
     "    else:\n",
@@ -125,14 +135,25 @@
     "    plt.axvline(color='k', linestyle='--', linewidth=1)\n",
     "    plt.axhline(color='k', linestyle='--', linewidth=1)\n",
     "    plt.xlabel('Time (s)')\n",
-    "    plt.ylabel('Z-scored HG')\n",
-    "\n",
-    "#plt.axvline?"
+    "    plt.ylabel('Z-scored HG')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Probably shouldn't use this?  Seems like security would be an issue\n",
+    "upload_widget = widgets.FileUpload(\n",
+    "    accept='',  # Accepted file extension e.g. '.txt', '.pdf', 'image/*', 'image/*,.pdf'\n",
+    "    multiple=False  # True to accept multiple files upload else False\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,13 +186,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c171fe79d1aa44028d93b47781dfde56",
+       "model_id": "7c842c05fc7042218fdeb430fad439ce",
        "version_major": 2,
        "version_minor": 0
       },
@@ -185,7 +208,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "062982e50b2d41a0be4d5375b698dc99",
+       "model_id": "3a11c3ad196b431ebcefcf506b2fe7e9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -198,9 +221,14 @@
     }
    ],
    "source": [
-    "ipf = ny.cortex_plot(sub.rh.pial_surface, color=sub.rh.properties['BA44_weight'], cmap='Reds', alpha=0.7)\n",
+    "# Plot the brain\n",
+    "#ipf = ny.cortex_plot(sub.rh.pial_surface, color=sub.rh.properties['BA44_weight'], cmap='Reds', alpha=0.7)\n",
+    "\n",
+    "# Make the brain white but slightly transparent (alpha=0.5)\n",
     "clr = np.ones((sub.rh.pial_surface.vertex_count,4))\n",
     "clr[:,3] = 0.5\n",
+    "\n",
+    "# Initialize ipyvolume figure\n",
     "ipv.figure()\n",
     "ipf = ny.cortex_plot(sub.rh.pial_surface, color=clr, alpha=0.5, underlay=None, mesh_alpha = 0.5)\n",
     "\n",
@@ -218,8 +246,8 @@
     "\n",
     "size = FloatSlider(min=0, max=10, step=0.1, description='Unselected size', style=style)\n",
     "size_selected = FloatSlider(min=0, max=10, step=0.1, description='Selected size', style=style)\n",
-    "color = ColorPicker(concise=True, description='Unselected')\n",
-    "color_selected = ColorPicker(concise=True, description='Selected')\n",
+    "color = ColorPicker(concise=True, description='Unselected', style=style)\n",
+    "color_selected = ColorPicker(concise=True, description='Selected', style=style)\n",
     "jslink((elecs_scatter, 'size'), (size, 'value'))\n",
     "jslink((elecs_scatter, 'size_selected'), (size_selected, 'value'))\n",
     "jslink((elecs_scatter, 'color'), (color, 'value'))\n",
@@ -228,7 +256,7 @@
     "\n",
     "#ipv.show()\n",
     "\n",
-    "grid = GridspecLayout(12, 2)\n",
+    "grid = GridspecLayout(15, 2)\n",
     "grid[:, 0] = ipf\n",
     "grid[0, 1] = size\n",
     "grid[1, 1] = size_selected\n",
@@ -242,21 +270,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "object of type 'int' has no len()",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-66-6b3b01eb5e19>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: object of type 'int' has no len()"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
