choose multiple electrodes on brain or on dropdown menu

--- a/scripts/NeuropythyTransparentBrain.ipynb
+++ b/scripts/NeuropythyTransparentBrain.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,34 +29,44 @@
     "import scipy.io\n",
     "import os\n",
     "import wget\n",
-    "\n",
-    "##unzip and load test subject data\n",
+    "from ipywidgets import FloatSlider, ColorPicker, VBox, jslink\n",
+    "# for unnzipping and loading data\n",
     "from zipfile import ZipFile\n",
     "\n",
-    "#pip install --upgrade ipyvolume\n",
-    "# needs: pip install shapely\n",
-    "# pip install wget\n",
-    "\n",
-    "## for dropdown menu\n",
+    "# for dropdown menu\n",
     "import ipywidgets as widgets\n",
     "from ipywidgets import interact, interactive, interact_manual, GridspecLayout\n",
     "\n",
     "# For loading data files\n",
     "import h5py\n",
     "\n",
+    "# from bqplot import pyplot as plt\n",
     "from matplotlib import pyplot as plt\n",
+    "\n",
+    "from bqplot import interacts\n",
     "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")"
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
+    "#pip install --upgrade ipyvolume\n",
+    "# needs: pip install shapely\n",
+    "# pip install wget\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
+    "## FETCH DATA\n",
+    "\n",
+    "# Where is the data located?\n",
     "local_path = '../shablona/data'\n",
-    "local_path = '/Applications/freesurfer_v5/subjects/'\n",
+    "# local_path = '/Applications/freesurfer_v5/subjects/'\n",
+    "subj_path = local_path+'/test_subj'\n",
+    "\n",
+    "# If the data is not there, download and extract it\n",
     "if not os.path.isdir(os.path.join(local_path,'test_subj')):\n",
     "    # download example data with wget\n",
     "    print('Downloading mesh and electrode data with wget')\n",
@@ -70,49 +80,26 @@
     "\n",
     "# Get the functional data\n",
     "data_dict = dict()\n",
-    "local_path = '../shablona/data'\n",
     "with h5py.File('%s/test_subj_CV.hf5'%(local_path),'r') as f:\n",
     "    stimulus_types = f['ecog'].keys()\n",
     "    times = f['times'][:].ravel()\n",
     "    #print(stimulus_types)\n",
     "    for s in stimulus_types:\n",
-    "        data_dict[s] = f['ecog'][s][:]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#data_dict['CV_listen'].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        data_dict[s] = f['ecog'][s][:]\n",
+    "        \n",
     "# Get the electrode coordinates\n",
-    "\n",
-    "local_path = '/Applications/freesurfer_v5/subjects/'\n",
-    "subj_path = local_path+'/test_subj'\n",
-    "\n",
     "if os.path.exists(subj_path):\n",
     "    sub = ny.freesurfer_subject(subj_path)\n",
     "    elecs = scipy.io.loadmat(os.path.join(subj_path,'elecs/TDT_elecs_all.mat'))\n",
     "else:\n",
     "    print('file not found?')\n",
     "    sub = ny.freesurfer_subject('test_subj')\n",
-    "    elecs=scipy.io.loadmat('/Applications/freesurfer_v5/subjects/test_subj/elecs/TDT_elecs_all.mat')\n",
-    "\n",
-    "#sub.hemis"
+    "    elecs=scipy.io.loadmat('/Applications/freesurfer_v5/subjects/test_subj/elecs/TDT_elecs_all.mat')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,22 +140,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
     "anatomical_areas = [area[0] for area in np.unique(elecs['anatomy'][:,3])]\n",
     "#                      selected_anatomy = anatomical_areas,\n",
-    "\n",
-    "elec_select = widgets.SelectMultiple(\n",
-    "    options= elecs['eleclabels'][:,0],\n",
-    "    value=['G1'],\n",
-    "    #rows=10,\n",
-    "    description='Electrode(s)',\n",
-    "    disabled=False\n",
-    ")\n",
-    "\n",
-    "#@interact\n",
     "\n",
     "def select_parameters(selected_elec = elecs['eleclabels'][:,0], \n",
     "                      selected_type = ['raw','not raw'],\n",
@@ -177,16 +154,34 @@
     "    elecs_scatter.selected = np.where(elecs['eleclabels'][:,0] == selected_elec)\n",
     "    fig = plot_activity(data_dict, times, condition = selected_stimulus, elec = elecs_scatter.selected)\n",
     "    return\n",
-    "    #return fig\n",
     "\n",
+    "    \n",
     "#elecs_scatter.selected\n",
     "\n",
-    "w = interactive(select_parameters)"
+    "w = interactive(select_parameters)\n",
+    "\n",
+    "elec_select = widgets.SelectMultiple(\n",
+    "   options= {a[0]:i for i, a in enumerate(list(elecs['eleclabels'][:,0]))},\n",
+    "   value= [1],\n",
+    "   #rows=10,\n",
+    "   description='Electrode(s)',\n",
+    "   disabled=False\n",
+    ")\n",
+    "\n",
+    "output_elec_select = widgets.Output()\n",
+    "\n",
+    "def on_value_change(change):\n",
+    "    with output_elec_select:\n",
+    "        elecs_scatter.selected = [i for i in change['new']]\n",
+    "        fig = plot_activity(data_dict, times, condition = selected_stimulus, elec = elecs_scatter.selected[0])\n",
+    "    return\n",
+    "\n",
+    "elec_select.observe(on_value_change, names='value')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -194,7 +189,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c842c05fc7042218fdeb430fad439ce",
+       "model_id": "3ca6f06ea1e147849681d6132431a234",
        "version_major": 2,
        "version_minor": 0
       },
@@ -208,7 +203,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3a11c3ad196b431ebcefcf506b2fe7e9",
+       "model_id": "4f77225bdd9b499a9cb6b21cee0e18b9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -221,9 +216,6 @@
     }
    ],
    "source": [
-    "# Plot the brain\n",
-    "#ipf = ny.cortex_plot(sub.rh.pial_surface, color=sub.rh.properties['BA44_weight'], cmap='Reds', alpha=0.7)\n",
-    "\n",
     "# Make the brain white but slightly transparent (alpha=0.5)\n",
     "clr = np.ones((sub.rh.pial_surface.vertex_count,4))\n",
     "clr[:,3] = 0.5\n",
@@ -235,12 +227,17 @@
     "# Get the lasso selector\n",
     "ipv.selector_default()\n",
     "\n",
+    "\n",
     "# Plot the electrodes as spheres\n",
-    "elecs_scatter = ipv.scatter(elecs['elecmatrix'][:,0],elecs['elecmatrix'][:,1],elecs['elecmatrix'][:,2], \n",
+    "elecs_scatter = ipv.pylab.scatter(elecs['elecmatrix'][:,0],elecs['elecmatrix'][:,1],elecs['elecmatrix'][:,2], \n",
     "                            marker='sphere', selected=[0,1,2,3,4], color_selected='cornflowerblue', \n",
     "                            color='coral', size_selected = 3.0)\n",
     "\n",
-    "from ipywidgets import FloatSlider, ColorPicker, VBox, jslink\n",
+    "def on_lasso_choice(*_):\n",
+    "    elec_select.value =  tuple(elecs_scatter.selected[0]);\n",
+    "    \n",
+    "    \n",
+    "elecs_scatter.observe(on_lasso_choice,'selected')\n",
     "\n",
     "style = {'description_width': '100px'}\n",
     "\n",
@@ -252,28 +249,23 @@
     "jslink((elecs_scatter, 'size_selected'), (size_selected, 'value'))\n",
     "jslink((elecs_scatter, 'color'), (color, 'value'))\n",
     "jslink((elecs_scatter, 'color_selected'), (color_selected, 'value'))\n",
+    "# jslink((elecs_scatter, 'selected'),(elec_select, 'index'))\n",
     "#VBox([ipv.gcc(), size, size_selected, color, color_selected])\n",
     "\n",
-    "#ipv.show()\n",
+    "\n",
     "\n",
     "grid = GridspecLayout(15, 2)\n",
     "grid[:, 0] = ipf\n",
-    "grid[0, 1] = size\n",
-    "grid[1, 1] = size_selected\n",
-    "grid[2, 1] = color\n",
-    "grid[3, 1] = color_selected\n",
-    "grid[4:, 1] = w\n",
-    "#grid[4, 1] = fig\n",
+    "grid[0, 1] = elec_select\n",
+    "# grid[1, 1] = size_selected\n",
+    "# grid[2, 1] = color\n",
+    "# grid[3, 1] = color_selected\n",
+    "grid[1:, 1] = w\n",
+    "# grid[4, 1] = fig\n",
     "\n",
-    "grid"
+    "grid\n",
+    "# ipv.show()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -299,7 +291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
